--- a/notebooks/SI/SI_traces_01.ipynb
+++ b/notebooks/SI/SI_traces_01.ipynb
@@ -2,12 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['OPENAI_API_KEY'] = \"<YOUR_API_KEY_HERE>\""
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(dotenv_path=\"/home/parikh92/sciborg_dev/.env\")\n",
+    "\n",
+    "openai_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "\n",
+    "os.environ[\"OPENAI_API_KEY\"] = openai_key"
    ]
   },
   {
@@ -3119,7 +3124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "sciborg-env-new",
    "language": "python",
    "name": "python3"
   },
@@ -3133,7 +3138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
