--- a/extra/langgraph_implementations/example1.ipynb
+++ b/extra/langgraph_implementations/example1.ipynb
@@ -953,7 +953,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciborg_beta",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
