--- a/notebooks/SI/SI_traces_02.ipynb
+++ b/notebooks/SI/SI_traces_02.ipynb
@@ -1783,7 +1783,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciborg_dev",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
