changed an incorrect import in pubchemcaller

--- a/notebooks/testing/experiment2.ipynb
+++ b/notebooks/testing/experiment2.ipynb
@@ -17,6 +17,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip freeze > requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "sh: line 1: conda: command not found\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "256"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#export the conda environment\n",
+    "#conda env export | grep -v \"^prefix: \" > environment.yml\n",
+    "\n",
+    "#write the conda environment to a file\n",
+    "os.system(\"conda env export | grep -v '^prefix: ' > environment.yml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -616,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +665,7 @@
     "    microservice=pubchem_command_microservice,\n",
     "    llm=ChatOpenAI(model='gpt-4'),\n",
     "    human_interaction=False,\n",
-    "    use_memory = ['chat'],\n",
+    "    use_memory = ['chat'], #use_memory='all' is also possible\n",
     "    return_intermediate_steps=True,\n",
     "    memory_file='core_memory.json',\n",
     "    verbose=True\n",
